# digitoys-firmware

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  MPU6050_CALIBRATION_FIXES.md  MPU6050_MOTION_TRACKING.md  README.md  TEST_RESULTS.md  partitions_custom.csv  sdkconfig  sdkconfig.old  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml.example  docker-compose.yml  set-user-id.sh  setup-idf.sh
components/: README.md
components/control-task/: CMakeLists.txt
components/control-task/include/: ControlState.hpp  ControlTask.hpp  ObstacleDetector.hpp  RCInputProcessor.hpp  SpeedController.hpp
components/control-task/src/: ControlState.cpp  ControlTask.cpp  ObstacleDetector.cpp  RCInputProcessor.cpp  SpeedController.cpp
components/data-logger/: CMakeLists.txt  README.md
components/data-logger/include/: AdvancedDataLoggerDemo.hpp  ControlTaskDataSource.hpp  DataLogger.hpp  DataLoggerConfig.hpp  DataLoggerDemo.hpp  DataLoggerService.hpp  IDataSource.hpp  MultiLoggerAPI.hpp  PhysicsAnalyzer.hpp  PhysicsAnalyzerAPI.hpp  TestDataSource.hpp
components/data-logger/src/: AdvancedDataLoggerDemo.cpp  ControlTaskDataSource.cpp  DataLogger.cpp  DataLoggerDemo.cpp  DataLoggerService.cpp  IDataSource.cpp  MultiLoggerAPI.cpp  PhysicsAnalyzer.cpp  PhysicsAnalyzerAPI.cpp  TestDataSource.cpp
components/data-modeling/: CMakeLists.txt
components/data-modeling/include/: BehaviorModel.hpp  DataModeling.hpp  DataModelingTypes.hpp  ModelingDataSource.hpp  PhysicsAnalyzer.hpp  TestSession.hpp
components/data-modeling/src/: BehaviorModel.cpp  DataModeling.cpp  ModelingDataSource.cpp  PhysicsAnalyzer.cpp  TestSession.cpp
components/digitoys-core/: CMakeLists.txt  README.md
components/digitoys-core/include/: ComponentBase.hpp  ComponentConfigFactory.hpp  ComponentError.hpp  ConfigValidator.hpp  Constants.hpp  DigitoysCoreAll.hpp  IComponent.hpp  IMonitor.hpp  Logger.hpp  component_config.hpp  component_error.hpp  component_interface.hpp  component_logging.hpp  digitoys_constants.hpp  digitoys_core.hpp
components/digitoys-core/src/: ComponentBase.cpp  ComponentConfigFactory.cpp  ComponentError.cpp  ConfigValidator.cpp  Logger.cpp  component_config.cpp  component_error.cpp  component_logging.cpp  digitoys_core.cpp
dashboard/: README.md  csv-logger.html  index.html  physics-test.html  (+1 more)
(+104 files in other folders)
